clean up gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
-/log/*.log
+*.swo
+*.swp
+.DS_Store
+.bundle
+.redcar/
+/binstubs
 /config/additional_environment.rb
+/config/email.yml
 /config/initializers/session_store.rb
 /config/local_env.rb
 /coverage
+/log/*.log
+/nbproject
 /public/plugin_assets
 /tmp
-/nbproject
 config/database.yml
 serverlog
-.DS_Store
-*.swp
-*.swo
-.redcar/
-.bundle
-/binstubs
