--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 language: ruby
+
 rvm:
   - 1.8.7
+
+before_install:
+  - gem install bundler -v2.1.11
+
 script:
   - bundle exec rake db:schema:load;
   - bundle exec rake db:test:prepare;
   - bundle exec rake
+
 before_script:
   - psql -c 'create database bettermeans_db_test;' -U postgres
