--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ rvm:
   - 1.8.7
 
 before_install:
-  - gem install bundler -v2.1.11
+  - gem update --system 2.1.11
+  - gem --version
 
 script:
   - bundle exec rake db:schema:load;
