--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ rvm:
 
 env:
   global:
+    - RAILS_ENV=test
     - BETTER_S3_ACCESS_KEY_ID=blah
     - BETTER_S3_SECRET_ACCESS_KEY=bloo
     - BETTER_S3_BUCKET_NAME=blee
