guess we'll be needing some database configuration for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ script:
   - bundle exec rake
 
 before_script:
+  - cp config/database.travis.yml config/database.yml
   - bundle exec rake db:create db:migrate
-  #- cp config/database.travis.yml config/database.yml
   #- psql -c 'create database bettermeans_db_test;' -U postgres
