load schema instead of running migrations

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,5 @@ script:
 
 before_script:
   - cp config/database.travis.yml config/database.yml
-  - bundle exec rake db:create db:migrate
+  - bundle exec rake db:create db:schema:load
   #- psql -c 'create database bettermeans_db_test;' -U postgres
