--- a/.tx/config
+++ b/.tx/config
@@ -1,8 +1,8 @@
 [main]
 host = https://www.transifex.com
 
-[bettermeans.enyml]
-file_filter = translations/bettermeans.enyml/<lang>.yml
+[better.enyml]
+file_filter = config/locales/<lang>.yml
+source_file = config/locales/en.yml
 source_lang = en
-type = YML_LEGACY
 
