--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - gem update --system 1.8.25
 
 script:
-  - bundle exec rake
+  - xvfb-run bundle exec rake
 
 before_script:
   - cp config/database.travis.yml config/database.yml
